# Dynamic-Field-For-Model

./: .gitignore  README.md  pyproject.toml
dynamic_fields/: Dockerfile  data.json
dynamic_fields/config/: settings.py  urls.py
dynamic_fields/profession/: admin.py  apps.py  consts.py  forms.py  models.py  urls.py  utils.py  views.py
dynamic_fields/profession/migrations/: 0001_initial.py
dynamic_fields/templates/: base.html
dynamic_fields/templates/admin/: select-profession.html
dynamic_fields/templates/profession/: profession_list.html  vacancy_list.html
infra/: docker-compose.yml  nginx.conf
