[tool.poetry]
name = "dynamic-fields-for-model"
version = "0.1.0"
description = ""
authors = ["Badmajor <v.balonkin@gmail.com>"]
readme = "README.md"

[tool.poetry-auto-export]
output = "dynamic_fields/requirements.txt"
without_hashes = true

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
